# drill_events_classification

./: .gitignore  data_splitting.md  main.py  pyproject.toml
data/: DataBaseTCN.xlsx
data/day_tractor/: test_day_tractor.xlsx  train_day_tractor.xlsx  val_day_tractor.xlsx
results/: all_results.xlsx  all_results_gru.xlsx  all_results_lstm.xlsx  all_results_tcn.xlsx
results/SHAP_GRU/: shap_report.md
results/day_tractor/: best_models.xlsx
results/results_2026-05-21_22-28-28/: hyperparameters.txt
source/: main.py  pyproject.toml
source/continuous/data/: data_preparation.py
source/continuous/gru_continuous/: train_gru.py
source/continuous/lstm_continuous/: train_lstm.py
source/continuous/shap_continuous/: explain_gru_continuous.py  explain_lstm_continuous.py  explain_tcn_continuous.py  shap_core.py
source/continuous/tcn_continuous/: train_tcn.py
source/day_tractor/: train_gru_day_tractor.py  train_lstm_day_tractor.py
source/day_tractor/data/: dataset.py  split_dataset.py
source/day_tractor/dl/: train_gru_day_tractor.py  train_lstm_day_tractor.py  train_tcn_day_tractor.py
source/day_tractor/shallow/: train_dt_day_tractor.py  (+5 more)
source/gru/: train_gru.py
source/lstm/: train.py  train_lstm.py
source/report/: best_models_day_tractor.py
source/shap_explain/: explain_gru.py  explain_lstm.py  explain_tcn.py  shap_core.py
source/shared_modules/: config.py  data_preparation.py  logging_setup.py  plot_data_split.py  timing.py
source/tcn/: TCN_GNSS_EVENTS.ipynb  TCN_GNSS_EVENTS_play.ipynb  requirements.txt  train.py  train_tcn.py
(+19 files in other folders)
